[project]
name = "infisicalsdk"
version = "1.1.1"
description = "Infisical API"
authors = [{ name = "OpenAPI Generator Community", email = "team@openapitools.org" }]
requires-python = "~=3.10"
readme = "README.md"
license.text = "NoLicense"
keywords = [
    "OpenAPI",
    "OpenAPI-Generator",
    "Infisical API",
]
dependencies = [
    "python-dateutil>=2.8.2",
    "aenum>=3.1.11",
    "setuptools>=68.0.0",
    "requests>=2.31.0",
    "boto3>=1.33.13",
    "botocore>=1.33.13",
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/mertemr/infisical-python-sdk"

[dependency-groups]
dev = [
    "pytest>=7.2.1",
    "tox>=3.9.0",
    "flake8>=4.0.0",    
    "pytest-cov>=4.1.0",
    "pytest-randomly>=3.12.0",
]

[tool.hatch.build.targets.sdist]
include = ["infisicalapi_client/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["infisicalapi_client/py.typed"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
