[project]
name = "infisicalsdk"
version = "1.1.2"
description = "Infisical API"
authors = [{ name = "OpenAPI Generator Community", email = "team@openapitools.org" }]
requires-python = "~=3.10"
readme = "README.md"
license.text = "NoLicense"
keywords = [
    "OpenAPI",
    "OpenAPI-Generator",
    "Infisical API",
]
dependencies = [
    "cachetools>=5.5.2",
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/mertemr/infisical-python-sdk"

[project.optional-dependencies]
awsauth = [
    "boto3>=1.38.20",
    "botocore>=1.38.20",
]

[dependency-groups]
dev = [
    "pytest>=7.2.1",
    "tox>=3.9.0",
    "flake8>=4.0.0",    
    "pytest-cov>=4.1.0",
    "pytest-randomly>=3.12.0",
]

[tool.hatch.build.targets.sdist]
include = ["infisicalapi_client/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["infisicalapi_client/py.typed"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
